--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "/Users/xuzhoufeng/anaconda/bin/python"
+    "python.pythonPath": "C:\\Users\\xu_zh\\Anaconda3\\python.exe"
 }
